--- a/PJP_project_ANTLR_parser/PJP_project_ANTLR_parser.csproj
+++ b/PJP_project_ANTLR_parser/PJP_project_ANTLR_parser.csproj
@@ -19,6 +19,9 @@
     <None Update="input1.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="input2.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="MyGrammar.g4">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
