first document almost OK

--- a/PJP_project_ANTLR_parser/PJP_project_ANTLR_parser.csproj
+++ b/PJP_project_ANTLR_parser/PJP_project_ANTLR_parser.csproj
@@ -16,6 +16,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="inputErr.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="input3.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="inputTest.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
